<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".fragments.Add_Fragment">



    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/add_studio_name"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddStudioName"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:text="@string/add_zip_code"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddZipCode"
                android:layout_width="150dp"
                android:layout_height="25dp"

                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/add_address"
            android:textColor="@color/colorEdit" />

        <EditText
            android:id="@+id/etAddAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"

            android:hint="@string/add_hint_address"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorHint" />

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Nº"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddNumber"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:text="@string/add_complement"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddComplement"
                android:layout_width="match_parent"
                android:layout_height="25dp"

                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:text="@string/add_district"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddDistrict"
                android:layout_width="100dp"
                android:layout_height="25dp"

                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/add_city"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddCity"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />


        </LinearLayout>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:text="@string/add_comments"
                android:textColor="@color/colorEdit" />

            <EditText
                android:id="@+id/etAddObs"
                android:layout_width="match_parent"
                android:layout_height="25dp"

                android:background="@drawable/edittext_background"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />



        </LinearLayout>
        <Button
            android:id="@+id/btAdd_Picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/btn_Picture"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:textAllCaps="false"
            />

        <ImageView
            android:id="@+id/ivAddStudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_foreground" />


        <Button
            android:id="@+id/btAdd_Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/btn_Save"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:textAllCaps="false"
            />
    </LinearLayout>


</FrameLayout>