<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:padding="20dp">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@mipmap/ic_launcher_foreground" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Developed"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Version"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/btLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/bt_logout"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textAllCaps="false"
                />
        </LinearLayout>


    </LinearLayout>




</LinearLayout>